<resources>
    <string name="app_name">Dr Gschiidscht</string>
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="loginButton">login</string>
    <string name="emailHint">Email</string>
    <string name="registerButton">Register</string>
    <string name="app_sneekyname">Dr Dümmscht</string>
    <string name="shared_preference_file_key">app_shared_preferences</string>
    <string name="found_easterEgg">Found it!</string>
    <string name="emailRepeatHint">Repeat email</string>
    <string name="passwordRepeatHint">Repeat password</string>
    <string name="missing_regsistration_name">Please insert a name!</string>
    <string name="missing_regsistration_email">Please enter an valid email adress</string>
    <string name="notequal_regsistration_email">Email adresses must be equal</string>
    <string name="missing_registration_password">Please enter a valid password</string>
    <string name="notequal_regsistration_password">Passwords must be equal</string>
    <string name="title_activity_team">TeamActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="registration_Failed">Failed to create user.</string>
    <string name="loginEmptyPassword">Please enter a password!</string>
    <string name="loginEmptyEmail">Please enter a valid email!</string>
    <string name="loginFailed">Loggin failed</string>
    <string name="easterEggStatus">easterEggState</string>
    <string name="logout">Logout</string>
    <string name="db_users">users</string>
    <string name="db_user_uid">uid</string>
    <string name="db_user_email">email</string>
    <string name="db_user_name">name</string>
    <string name="settings">Settings</string>
    <string name="createTeam">Create a Team</string>
    <string name="createTeamName">Team Name</string>
    <string name="createTeamButton">Create Team</string>
    <string name="createTeamNameEmpty">Please enter a name</string>
    <string name="db_teams">teams</string>
    <string name="db_user_teams">teams</string>
    <string name="teamTeamname">Team Di Gschiidschtä</string>
    <string name="teamCurrentElected">Nobody is elected</string>
    <string name="teamCurrentElectionButton">Elect Now!</string>
    <string name="info">Information</string>
    <string name="db_team_currentElected">currentElected</string>
</resources>
